--- a/Makefile.devel
+++ b/Makefile.devel
@@ -47,6 +47,8 @@ LDADD+=-L/opt/local/lib -ljpeg
 # LIBJPEG8:
 CFLAGS+=-DUSE_JPEG8
 
+CFLAGS+=-DDCRAW_VERBOSE
+
 DCRAW_GEN= internal/dcraw_common.cpp internal/dcraw_fileio.cpp
 DCRAW_LIB_OBJECTS=object/dcraw_common.o object/libraw_cxx.o object/libraw_datastream.o object/libraw_c_api.o object/dcraw_fileio.o object/demosaic_packs.o
 DCRAW_LIB_MT_OBJECTS=object/dcraw_common_mt.o object/libraw_cxx_mt.o object/libraw_datastream_mt.o object/libraw_c_api_mt.o object/dcraw_fileio_mt.o object/demosaic_packs_mt.o
